<resources>
	
	<!-- 软件名 -->
	<string name="app_name">月海 - 图片</string>
	<string name="app_name_en">yuehai-pic</string>
	
	<!-- 翻页视图的标签栏按钮显示文字 ———————————————————————————————————————————————————————————————— -->
	<string name="navigation_bar_all">全部</string>
	<string name="navigation_bar_directory">目录</string>
	<string name="navigation_bar_tree">树</string>
	<string name="navigation_bar_album">相册</string>
	
	<!-- TextView 文字内容使用 -->
	<string name="image_viewer_details_title">名称：%s</string>
	<string name="image_viewer_details_data">路径：%s</string>
	<string name="image_viewer_details_aspect">尺寸：%d x %d</string>
	<string name="image_viewer_details_size">大小：%d</string>
	<string name="image_viewer_details_type">类型：%s</string>
	<string name="image_viewer_details_bucketDisplayName">来源：%s</string>
	<string name="image_viewer_details_dateAdded">保存日期：%s</string>
	<string name="image_viewer_rename_popup_rename">重命名</string>
	
	<!-- ImageButton 控件的 contentDescription 属性使用，用来描述这个控件的作用；或 TextView 同时显示图片和文字 ———————————— -->
	<string name="tool_bar_settings_menu">打开设置菜单</string>
	<string name="tool_bar_sort">排序</string>
	<string name="tool_bar_search">搜索</string>
	<string name="tool_bar_start">开始进行分类处理</string>
	<string name="fragment_content_all_item_imagePath">某张图片</string>
	<string name="sidebar_menu_profile_photo">头像</string>
	<string name="image_viewer_top_back_operation">返回按钮</string>
	<string name="image_viewer_top_details_operation">详细信息</string>
	<string name="image_viewer_bottom_move_operation">移动</string>
	<string name="image_viewer_bottom_delete_operation">删除</string>
	<string name="image_viewer_bottom_rename_operation">改名</string>
	<string name="image_viewer_bottom_edit_operation">编辑</string>
	<string name="image_viewer_bottom_sending_operation">分享</string>
	
	<!-- 侧边栏控件 sidebar_menu 使用 ———————————————————————————————————————————————————————————————— -->
	<string name="sidebar_menu_user_name">月海</string>
	<string name="sidebar_menu_settings">设置</string>
	<string name="sidebar_menu_exit">退出</string>
	
	<!-- 设置页面使用 ———————————————————————————————————————————————————————————————— -->
	<string name="settings_convention">常规</string>
	<string name="settings_page">页面</string>
	<string name="settings_view_mode_strategy">视图模式</string>
	<string name="settings_view_mode_description">配置主页视图的显示模式，滑动翻页视图模式、点击切换视图模式</string>
	<string name="settings_loading_caching">加载及缓存</string>
	<string name="settings_loading_caching_cache_loading_strategy">缓存加载策略</string>
	<string name="settings_loading_caching_cache_loading_strategy_description">配置缓存加载策略，影响图片的载入速度和软件使用的存储空间</string>
	
	<!-- 对话框使用，确定与取消按钮 ———————————————————————————————————————————————————————————————— -->
	<string name="alert_dialog_positive">确定</string>
	<string name="alert_dialog_negative">取消</string>
	
	<!-- 对话框使用，标题、选项（内容）、说明 ———————————————————————————————————————————————————————————————— -->
	<!-- 储存权限获取失败弹窗标题、内容 -->
	<string name="alert_dialog_title_storage_permission_error">获取存储卡读写权限失败</string>
	<string name="alert_dialog_content_storage_permission_error">这是一个图片管理器\n没有权限就做不到任何事情\n重启软件可以重新获取权限\n点击确定按钮重新启动软件\n点击取消按钮不会发生任何事</string>
	<!-- 主页 - 顶部工具栏 - 排序按钮弹窗标题、选项 -->
	<string name="alert_dialog_title_select_sort_method">选择排序方式</string>
	<string-array name="alert_dialog_content_select_sort_method_option">
		<item>按时间降序</item>
		<item>按时间升序</item>
		<item>按名称降序</item>
		<item>按名称升序</item>
	</string-array>
	<!-- 设置 - 页面 - 视图模式弹窗标题、选项 -->
	<string name="alert_dialog_title_select_view_mode">选择视图模式</string>
	<string-array name="alert_dialog_content_view_mode_option">
		<item>滑动翻页视图模式</item>
		<item>点击切换视图模式</item>
	</string-array>
	<!-- 设置 - 加载及缓存 - 缓存加载策略弹窗标题、选项、说明 -->
	<string name="alert_dialog_title_select_cache_loading_strategy">选择缓存加载策略</string>
	<string-array name="alert_dialog_content_select_cache_loading_strategy_option">
		<item>全部缓存</item>
		<item>不进行磁盘缓存</item>
		<item>只缓存原始图像数据</item>
		<item>只缓存转换后的图像</item>
		<item>自动选择</item>
	</string-array>
	<string-array name="alert_dialog_content_select_cache_loading_strategy_description">
		<item>DiskCacheStrategy.ALL: 全部缓存。它会将原始图像和转换后的图像都缓存在磁盘上。这是最常见的策略，因为它允许在需要时快速加载图像，并在离线时仍然可用。</item>
		<item>DiskCacheStrategy.NONE: 不进行磁盘缓存。每次加载图像时都会从原始数据源（如网络）获取最新的图像，并且不会将图像缓存在本地磁盘上。这种策略适用于那些不希望在本地进行缓存的情况。</item>
		<item>DiskCacheStrategy.DATA: 只缓存原始图像数据。转换后的图像不会被缓存。这种策略适用于只需要加载原始数据的情况，例如加载视频帧等。</item>
		<item>DiskCacheStrategy.RESOURCE: 只缓存转换后的图像。原始图像数据不会被缓存。这种策略适用于不需要再次解码原始数据的情况，例如加载处理过的图像。</item>
		<item>DiskCacheStrategy.AUTOMATIC: 自动根据原始数据源（如网络地址）和资源类型（如动画或静态图像）来选择合适</item>
	</string-array>
	
	
</resources>