<?xml version="1.0" encoding="utf-8"?>
<!-- 设置页面 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/settings"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/white"
	android:orientation="vertical">
	
	<!-- 顶部导航栏 -->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="@dimen/dp_50"
		android:orientation="horizontal"
		android:background="@color/yuehai_light_blue"
		android:weightSum="10">
		
		<!-- 返回按钮 -->
		<ImageButton
			android:id="@+id/settings_exit"
			android:src="@drawable/icon_image_details_arrow_back_24"
			android:contentDescription="@string/image_viewer_bottom_operation"
			style="@style/ToolBarImageButton"/>
	</LinearLayout>

	<!-- 常规 -->
	<TextView
		android:text="@string/settings_convention"
		style="@style/SettingsClassifyTextView"/>
	
	<!-- 页面 -->
	<TextView
		android:text="@string/settings_page"
		style="@style/SettingsClassifyTextView"/>
	
	<!-- 加载及缓存 -->
	<TextView
		android:text="@string/settings_loading_caching"
		style="@style/SettingsClassifyTextView"/>
	
	<!-- 缓存加载策略 -->
	<LinearLayout
		android:id="@+id/settings_loading_caching_cache_loading_strategy"
		style="@style/SettingsItemsLinearLayout">
		<TextView
			android:id="@+id/settings_loading_caching_cache_loading_strategy_option"
			android:text="@string/settings_loading_caching_cache_loading_strategy"
			style="@style/SettingsItemsOptionTextView"/>
		<TextView
			android:id="@+id/settings_loading_caching_cache_loading_strategy_description"
			android:text="@string/settings_loading_caching_cache_loading_strategy_description"
			style="@style/SettingsItemsDescriptionTextView"/>
	</LinearLayout>
	
	
</LinearLayout>