<?xml version="1.0" encoding="utf-8"?>
<!-- 侧边栏 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="@dimen/dp_280"
	android:layout_height="match_parent"
	android:background="@color/yuehai_light_blue"
	android:orientation="vertical">
	
	<!-- 头像 -->
	<ImageView
		android:id="@+id/sidebar_menu_profile_photo"
		android:layout_width="@dimen/dp_100"
		android:layout_height="@dimen/dp_100"
		android:layout_gravity="center"
		android:layout_margin="@dimen/dp_24"
		android:src="@drawable/software_icon"
		android:scaleType="centerCrop"
		android:contentDescription="@string/sidebar_menu_profile_photo" />

	<!-- 用户名，昵称 -->
	<TextView
		android:id="@+id/sidebar_menu_user_name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:padding="@dimen/dp_10"
		android:layout_marginBottom="@dimen/dp_24"
		android:text="@string/sidebar_menu_user_name" />
	
	<!-- 下方菜单 -->
	<LinearLayout
		android:id="@+id/sidebar_menu_control_list"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:background="@color/white">
		
		<!-- 设置 -->
		<TextView
			android:id="@+id/sidebar_menu_settings"
			android:text="@string/sidebar_menu_settings"
			app:drawableStartCompat="@drawable/icon_sidebar_menu_settings_30"
			tools:drawableStart="@drawable/icon_sidebar_menu_settings_30"
			style="@style/SidebarMenuControlTextView"/>
		
		<!-- 退出 -->
		<TextView
			android:id="@+id/sidebar_menu_exit"
			android:text="@string/sidebar_menu_exit"
			app:drawableStartCompat="@drawable/icon_sidebar_menu_exit_30"
			tools:drawableStart="@drawable/icon_sidebar_menu_exit_30"
			style="@style/SidebarMenuControlTextView"/>

	</LinearLayout>

</LinearLayout>