<?xml version="1.0" encoding="utf-8"?>
<!-- 工具栏 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal"
	android:background="@color/yuehai_light_blue"
	android:weightSum="8">

	<!-- 设置菜单 -->
	<ImageButton
		android:id="@+id/tool_bar_settings_menu"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:src="@drawable/tool_bar_settings_menu_24"
		android:gravity="center"
		android:layout_weight="1"
		style="?android:attr/buttonBarButtonStyle"
		android:contentDescription="@string/tool_bar_settings_menu" />
	
	<!-- 占位，用来将后面的控件挤到右边 -->
	<TextView
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="4" />
	
	<!-- 排序按钮 -->
	<ImageButton
		android:id="@+id/tool_bar_sort"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:src="@drawable/tool_bar_sort_24"
		android:gravity="center"
		android:layout_weight="1"
		style="?android:attr/buttonBarButtonStyle"
		android:contentDescription="@string/tool_bar_sort" />
	
	<!-- 搜索按钮 -->
	<ImageButton
		android:id="@+id/tool_bar_search"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:src="@drawable/tool_bar_search_24"
		android:gravity="center"
		android:layout_weight="1"
		style="?android:attr/buttonBarButtonStyle"
		android:contentDescription="@string/tool_bar_search" />
	
	<!-- 开始按钮 -->
	<ImageButton
		android:id="@+id/tool_bar_start"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:src="@drawable/tool_bar_start_24"
		android:gravity="center"
		android:layout_weight="1"
		style="?android:attr/buttonBarButtonStyle"
		android:contentDescription="@string/tool_bar_settings_menu" />

</LinearLayout>